--- a/style/App.css
+++ b/style/App.css
@@ -9,8 +9,8 @@ ul{list-style:none}
 a{text-decoration:none;color:#000;text-wrap:nowrap}
 section{display:grid;place-items:center}
 section:not(:first-child){margin:4rem 0}
-.container{max-width:1170px;display:grid;place-items:center}
+.container{width:1170px;display:grid;place-items:center}
 section:first-child{padding-top:5rem}
 @media (max-width:768px){
-.container{max-width:100%}
+.container{width:100%}
 }
